fix: fixed multiple errors in data handling (eg. collumns having wrong data), fixed entry date in tables not showing

--- a/style.css
+++ b/style.css
@@ -58,15 +58,18 @@ main {
     height: 100%;
     z-index: 50;
     transition: opacity 0.25s ease;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .modal-content {
     position: relative;
-    top: 5rem; /* top-20 */
     margin: auto;
     padding: 1.25rem; /* p-5 */
     border-width: 1px;
-    width: 24rem; /* w-96 */
+    max-width: 28rem; /* w-112 */
+    width: 95%;
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05); /* shadow-lg */
     border-radius: 0.375rem; /* rounded-md */
     background-color: white;
